components/heptagon/test/bad/bad_param_ident.ept
node f<<n:int>>(n: int) returns (o:int)
let
  o = n
tel